--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
-  "name": "rubickbase",
-  "version": "0.1.9",
-  "description": "Expand native capabilities for nodejs and electron based on rust",
-  "type": "module",
-  "author": "sovlookup",
-  "email": "gonorth@qq.com",
-  "scripts": {
-    "test": "ts-node test/index.test.ts",
-    "build": "bob-esbuild tsc && pnpm prepack -r",
-    "commit": "git add . && npx gitmoji -c",
-    "release": "release-it",
-    "ok": "npm run commit && npm run release"
-  },
-  "license": "MPLv2",
-  "devDependencies": {
-    "@types/estree": "^0.0.50",
-    "@types/signale": "^1.4.2",
-    "bob-esbuild": "^1.3.0",
-    "bob-esbuild-cli": "^1.0.1",
-    "@release-it/bumper": "^3.0.1",
-    "gitmoji-changelog": "^2.2.1",
-    "gitmoji-cli": "^4.6.1",
-    "release-it": "^14.11.5"
-  },
-  "release-it": {
-    "npm": {
-      "publish": false
-    },
-    "plugins": {
-      "@release-it/bumper": {
-        "in": "package.json",
-        "out": [
-          "packages/rubickbase/package.json",
-          "packages/rust-backend/package.json"
-        ]
-      }
-    },
-    "hooks": {
-      "after:bump": "npx gitmoji-changelog --group-similar-commits"
-    }
-  }
+	"name": "rubickbase",
+	"version": "0.1.9",
+	"description": "Expand native capabilities for nodejs and electron based on rust",
+	"type": "module",
+	"author": "sovlookup <gonorth@qq.com>",
+	"scripts": {
+		"test": "ts-node test/index.test.ts",
+		"build": "bob-esbuild tsc && pnpm prepack -r",
+		"commit": "git add . && pnpx gitmoji -c",
+		"release": "release-it",
+		"ok": "pnpm run commit && pnpm run release",
+		"ci:publish": "pnpm pretty:all && zx scripts/publish.js",
+		"pretty:all": "prettier -w \"**/*.{ts,tsx,js,cjs,mjs}\""
+	},
+	"license": "MPLv2",
+	"devDependencies": {
+		"@types/estree": "^0.0.50",
+		"@types/signale": "^1.4.2",
+		"bob-esbuild": "^1.3.0",
+		"bob-esbuild-cli": "^1.0.1",
+		"@release-it/bumper": "^3.0.1",
+		"gitmoji-changelog": "^2.2.1",
+		"gitmoji-cli": "^4.6.1",
+		"release-it": "^14.11.5",
+		"prettier": "^2.4.0",
+		"zx": "^4.2.0"
+	},
+	"release-it": {
+		"npm": {
+			"publish": false
+		},
+		"plugins": {
+			"@release-it/bumper": {
+				"in": "package.json",
+				"out": [
+					"packages/rubickbase/package.json",
+					"packages/rust-backend/package.json"
+				]
+			}
+		},
+		"hooks": {
+			"after:bump": "pnpx gitmoji-changelog --group-similar-commits"
+		}
+	}
 }
