--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
 	},
 	"license": "MPLv2",
 	"devDependencies": {
+		"@release-it/bumper": "^3.0.1",
 		"@types/estree": "^0.0.50",
 		"@types/signale": "^1.4.2",
 		"bob-esbuild": "^1.3.0",
 		"bob-esbuild-cli": "^1.0.1",
-		"@release-it/bumper": "^3.0.1",
 		"gitmoji-changelog": "^2.2.1",
 		"gitmoji-cli": "^4.6.1",
-		"release-it": "^14.11.5",
 		"prettier": "^2.4.0",
+		"release-it": "^14.11.5",
+		"rollup-plugin-gproto": "^1.0.1",
 		"zx": "^4.2.0"
 	},
 	"release-it": {
