--- a/packages/rust-backend/package.json
+++ b/packages/rust-backend/package.json
@@ -13,10 +13,9 @@
 	},
 	"license": "MPLv2",
 	"author": "sovlookup <gonorth@qq.com>",
-	"type": "module",
 	"scripts": {
-		"build": "zx scripts/build.js",
-		"publish-platform": "pnpm build && zx scripts/publish.js",
+		"build": "zx scripts/build.mjs",
+		"publish-platform": "pnpm build && zx scripts/publish.mjs",
 		"build-linux": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu",
 		"build-win32": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc",
 		"build-darwin": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin",
