--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -21,7 +21,7 @@ prost = "0.8"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 chrono = "0.4.19"
 scrap = "0.5"
-repng = "0.2.2"
+image = "0.23.14"
 
 [build-dependencies]
 tonic-build = "0.5"
