--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -42,7 +42,7 @@
 	"dependencies": {
 		"@grpc/grpc-js": "^1.3.7",
 		"@grpc/proto-loader": "^0.6.4",
-		"evt": "^1.10.1",
+		"evt": "^2.0.0-beta.38",
 		"mali": "^0.44.3",
 		"signale": "^1.4.0"
 	},
