--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -16,17 +16,18 @@ opt-level = "s"
 
 [dependencies]
 rdev = "0.5.1"
-tonic = "0.5"
-prost = "0.8"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tonic = "0.5.2"
+prost = "0.8.0"
+tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
 chrono = "0.4.19"
 scrap = "0.5"
 image = "0.23.14"
+lzma-rs = "0.2.0"
 
 [build-dependencies]
-tonic-build = "0.5"
+tonic-build = "0.5.2"
 
 [dependencies.neon]
 version = "0.9.1"
 default-features = false
-features = ["napi-6"]
+features = ["napi-6","channel-api"]
