--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -23,6 +23,7 @@ chrono = "0.4.19"
 scrap = "0.5.0"
 image = "0.23.14"
 lzma-rs = "0.2.0"
+base64 = "0.13.0"
 
 [build-dependencies]
 tonic-build = "0.5.2"
