:sparkles: linux app

--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -15,15 +15,26 @@ opt-level = "s"
 # incremental = false
 
 [dependencies]
+# mouse/keyboard event
 rdev = "0.5.1"
+# GRPC
 tonic = "0.5.2"
 prost = "0.8.0"
 tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
 chrono = "0.4.19"
+# screen capture
 scrap = "0.5.0"
+# image
 image = "0.23.14"
-lzma-rs = "0.2.0"
 base64 = "0.13.0"
+# de/composs
+lzma-rs = "0.2.0"
+# parse apps
+xdg = "2.2.0"
+rust-ini = "0.17.0"
+walkdir = "2.3.2"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
 
 [build-dependencies]
 tonic-build = "0.5.2"
