--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -43,9 +43,9 @@
 		"@grpc/grpc-js": "^1.3.7",
 		"@grpc/proto-loader": "^0.6.5",
 		"@silvia-odwyer/photon-node": "^0.3.1",
+		"consola": "^2.15.3",
 		"fs-extra": "^10.0.0",
-		"mali": "^0.44.3",
-		"signale": "^1.4.0"
+		"mali": "^0.44.3"
 	},
 	"devDependencies": {
 		"protobufjs": "^6.11.2"
