--- a/packages/rubickbase/package.json
+++ b/packages/rubickbase/package.json
@@ -32,12 +32,8 @@
 		}
 	},
 	"scripts": {
+		"postinstall": "node scripts/postinstall.js",
 		"prepack": "bob-esbuild build --clean"
-	},
-	"optionalDependencies": {
-		"rubick_backend-darwin": "*",
-		"rubick_backend-linux": "*",
-		"rubick_backend-win32": "*"
 	},
 	"dependencies": {
 		"@grpc/grpc-js": "^1.3.7",
@@ -45,7 +41,7 @@
 		"@silvia-odwyer/photon-node": "^0.3.1",
 		"consola": "^2.15.3",
 		"fs-extra": "^10.0.0",
-		"mali": "^0.44.3"
+		"mali": "^0.44.4"
 	},
 	"devDependencies": {
 		"protobufjs": "^6.11.2"
