--- a/packages/rust-backend/package.json
+++ b/packages/rust-backend/package.json
@@ -2,7 +2,7 @@
 	"name": "rubick_backend",
 	"version": "0.11.0",
 	"description": "Native Node.js modules that listen/send simulated events to devices",
-	"main": "index.node",
+	"main": "index.js",
 	"homepage": "https://github.com/SOVLOOKUP/rubickbase",
 	"cpu": [
 		"x64"
