--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,11 @@ jobs:
             - name: Cache pnpm modules
               uses: actions/cache@v2
               with:
-                  path: ~/.pnpm-store
-                  key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+                  path: node_modules
+                  key: ${{ runner.os }}-${{ hashFiles('**/package.json') }}
                   restore-keys: |
                       ${{ runner.os }}-
+
             - uses: pnpm/action-setup@v2.0.1
               with:
                   version: 6.14.7
