--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rubickbase",
-	"version": "1.1.4-0",
+	"version": "1.1.4",
 	"description": "Expand native capabilities for nodejs and electron based on rust",
 	"author": "sovlookup <gonorth@qq.com>",
 	"scripts": {
