--- a/packages/rust-backend/package.json
+++ b/packages/rust-backend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rubick_backend",
-	"version": "1.1.4-0",
+	"version": "1.1.4",
 	"description": "Native Node.js modules that listen/send simulated events to devices",
 	"main": "index.js",
 	"homepage": "https://github.com/SOVLOOKUP/rubickbase",
