--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -28,7 +28,7 @@ scrap = "0.5.0"
 image = "0.23.14"
 base64 = "0.13.0"
 # de/composs
-lzma-rs = "0.2.0"
+# lzma-rs = "0.2.0"
 # parse apps
 xdg = "2.2.0"
 rust-ini = "0.17.0"
