--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rubickbase-example",
-	"version": "1.2.0",
+	"version": "1.2.1-0",
 	"description": "example usage of rubickbase",
 	"main": "src/index.js",
 	"author": "sovlookup",
