--- a/packages/rust-backend/Cargo.toml
+++ b/packages/rust-backend/Cargo.toml
@@ -28,6 +28,9 @@ scrap = "0.5.0"
 image = "0.23.14"
 base64 = "0.13.0"
 # de/composs
+# clap = "2.33.3"
+# glob = "0.3.0"
+zstd = "0.9"
 # lzma-rs = "0.2.0"
 # parse apps
 xdg = "2.2.0"
