--- a/packages/rust-backend/package.json
+++ b/packages/rust-backend/package.json
@@ -16,14 +16,14 @@
 	"scripts": {
 		"build": "zx scripts/build.mjs",
 		"publish-platform": "pnpm build && zx scripts/publish.mjs",
-		"build-linux": "cargo +nightly build --release --target x86_64-unknown-linux-gnu",
-		"build-win32": "cargo +nightly build --release --target x86_64-pc-windows-msvc",
-		"build-darwin": "cargo +nightly build --release --target x86_64-apple-darwin",
-		"build-linux-min": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu",
-		"build-win32-min": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc",
-		"build-darwin-min": "cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin",
+		"build-linux": "cargo +nightly build --release --lib --target x86_64-unknown-linux-gnu",
+		"build-win32": "cargo +nightly build --release --lib --target x86_64-pc-windows-msvc",
+		"build-darwin": "cargo +nightly build --release --lib --target x86_64-apple-darwin",
+		"build-linux-min": "cargo +nightly build --release --lib -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu",
+		"build-win32-min": "cargo +nightly build --release --lib -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-pc-windows-msvc",
+		"build-darwin-min": "cargo +nightly build --release --lib -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-apple-darwin",
 		"test": "cargo test",
-		"electron-rebuild": "electron-build-env neon build rubick_backend --release"
+		"electron-rebuild": "electron-build-env neon build rubick_backend --release --lib"
 	},
 	"devDependencies": {
 		"zx": "^4.2.0"
